--- a/src/less/main.less
+++ b/src/less/main.less
@@ -29,13 +29,57 @@ body {
   h1 {
     margin: 0;
     padding: 0;
+    font-weight: normal;
   }
 }
 
 .hidden {
   display: none;
 }
+.container {
+  padding-left: 5%;
+  .row {
+    > span {
+      display: inline-block;
+      cursor: pointer;
+      text-align: center;
+      width: 10%;
+      height: 30px;
+      line-height: 30px;
+      border: 1px solid #cccccc;
+      background: #ffffff;
+      border-right-width: 0;
+      border-bottom-width: 0;
 
+      &.cell_g_right {
+        border-right-width: 1px;
+      }
+      &:first-child {
+        border-left-width: 2px;
+      }
+
+      &:last-child {
+        border-right-width: 2px;
+      }
+    }
+
+    &.row_g_bottom {
+      > span {
+        border-bottom-width: 1px;
+      }
+    }
+    &:first-child {
+      > span {
+        border-top-width: 2px;
+      }
+    }
+    &:last-child {
+      > span {
+        border-bottom-width: 2px;
+      }
+    }
+  }
+}
 .dashboard {
   width: 100%;
   height: 3rem;
@@ -58,6 +102,7 @@ body {
       border: 1px solid #cccccc;
       background: steelblue;
       border-right-width: 0;
+      font-family: "微软雅黑";
     }
   }
 }
