--- a/www/css/main.css
+++ b/www/css/main.css
@@ -25,9 +25,43 @@ body > * {
 .title h1 {
   margin: 0;
   padding: 0;
+  font-weight: normal;
 }
 .hidden {
   display: none;
+}
+.container {
+  padding-left: 5%;
+}
+.container .row > span {
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+  width: 10%;
+  height: 30px;
+  line-height: 30px;
+  border: 1px solid #cccccc;
+  background: #ffffff;
+  border-right-width: 0;
+  border-bottom-width: 0;
+}
+.container .row > span.cell_g_right {
+  border-right-width: 1px;
+}
+.container .row > span:first-child {
+  border-left-width: 2px;
+}
+.container .row > span:last-child {
+  border-right-width: 2px;
+}
+.container .row.row_g_bottom > span {
+  border-bottom-width: 1px;
+}
+.container .row:first-child > span {
+  border-top-width: 2px;
+}
+.container .row:last-child > span {
+  border-bottom-width: 2px;
 }
 .dashboard {
   width: 100%;
@@ -53,4 +87,5 @@ body > * {
   border: 1px solid #cccccc;
   background: steelblue;
   border-right-width: 0;
+  font-family: "微软雅黑";
 }
